fix sorting in Web UI broken by locale-dependent number formats
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@634727 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/commons-monitoring.css
+++ b/src/main/resources/commons-monitoring.css
@@ -76,3 +76,11 @@ thead th.headerSortDown {
     border: solid 1px #8dbdd8;
     font-size: 0.8em;
 }
+
+tbody tr td:first-child {
+    text-align: left;
+}
+
+tbody tr td {
+    text-align: right;
+}
