fix unexpected columns when monitors hold heterogenous statvalues - CSS style
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@637955 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/commons-monitoring.css
+++ b/src/main/resources/commons-monitoring.css
@@ -84,3 +84,8 @@ tbody tr td:first-child {
 tbody tr td {
     text-align: right;
 }
+
+td.not-applicable {
+    text-align: center;
+    background: #efefef;
+}
