moving clear/reset button on report page + adding links to convert in ms/ns/s + mapping report.csv, report.xml, report.json
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@1508323 13f79535-47bb-0310-9956-ffa450edef68

--- a/reporting/src/main/resources/templates/home.vm
+++ b/reporting/src/main/resources/templates/home.vm
@@ -22,7 +22,7 @@
     </div>
     <div>
         <ul>
-            <li><a href="$mapping/report">Report</a></li>
+            <li><a href="$mapping/report">Report</a> (<a href="$mapping/report.xml">xml</a>, <a href="$mapping/report.json">json</a>, <a href="$mapping/report.csv">csv</a>)</li>
         </ul>
     </div>
 </div>
