adding basic plugin API
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@1508328 13f79535-47bb-0310-9956-ffa450edef68

--- a/reporting/src/main/resources/templates/home.vm
+++ b/reporting/src/main/resources/templates/home.vm
@@ -23,6 +23,9 @@
     <div>
         <ul>
             <li><a href="$mapping/report">Report</a> (<a href="$mapping/report.xml">xml</a>, <a href="$mapping/report.json">json</a>, <a href="$mapping/report.csv">csv</a>)</li>
+            #foreach ( $plugin in $plugins )
+                <li><a href="$mapping/$plugin.url">$plugin.name</a></li>
+            #end
         </ul>
     </div>
 </div>
