replacing hardcoded report stuff in MonitoringController by a plugin
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@1508823 13f79535-47bb-0310-9956-ffa450edef68

--- a/reporting/src/main/resources/templates/jmx/main.vm
+++ b/reporting/src/main/resources/templates/jmx/main.vm
@@ -35,7 +35,7 @@
             #tree ( $jmxTree )
         </div>
         <div id="jmx-info" class="span10">
-            TODO
+            Click on the left tree to select a leaf top show the attributes of a MBean.
         </div>
     </div>
 </div>
