avoiding css ambiguity + adding bootstrap-dropdown to replace the breadcrumb in report page
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@1508826 13f79535-47bb-0310-9956-ffa450edef68

--- a/reporting/src/main/resources/resources/css/monitoring.css
+++ b/reporting/src/main/resources/resources/css/monitoring.css
@@ -35,21 +35,13 @@ th#report-table {
     background-position: right;
 }
 
-ul {
+ul.jmx {
     list-style: none;
     margin: 0;
     padding: 0;
 }
-li {
-    /*
-    background-image: url(page.png);
-    background-position: 0 1px;
-    background-repeat: no-repeat;
-    */
+li.jmx {
     padding-left: 20px;
-}
-li.node {
-    /*background-image: url(folder.png);*/
 }
 
 a.nodeText {
