--- a/reporting/src/main/resources/templates/jmx/main.vm
+++ b/reporting/src/main/resources/templates/jmx/main.vm
@@ -15,12 +15,12 @@
   limitations under the License.
 *#
 #macro ( tree $tree )
-    <ul>
+    <ul class="jmx">
         #foreach( $node in $tree.children )
             #if ( $node.isLeaf() )
-                <li id="$node.base64" class="leaf">
+                <li id="$node.base64" class="jmx leaf">
             #else
-                <li>
+                <li class="jmx">
             #end
                 $node.name
                 #tree ( $node )
