--- a/reporting/src/main/resources/templates/jmx/main.vm
+++ b/reporting/src/main/resources/templates/jmx/main.vm
@@ -35,11 +35,12 @@
             #tree ( $jmxTree )
         </div>
         <div id="jmx-info" class="span10">
-            Click on the left tree to select a leaf top show the attributes of a MBean.
+            Click on the left tree to select a leaf to show the attributes of a MBean.
         </div>
     </div>
 </div>
 
+<script type="text/javascript" src="$mapping/resources/js/bootstrap-tab.js"></script>
 <script type="text/javascript">
     $(function() {
         $('li > ul').each(function (i) {
