escaping method parameter by parameter for jmx method invocation + fixing JMX names of counters
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@1509112 13f79535-47bb-0310-9956-ffa450edef68

--- a/reporting/src/main/resources/templates/jmx/mbean.vm
+++ b/reporting/src/main/resources/templates/jmx/mbean.vm
@@ -76,7 +76,7 @@
 
             // we pass base64 as id so this is a workaround since = will likely make #id fail
             $('[id=\'' + id + '\']' + ' :input').each(function () {
-                url = url + "/" + $(this).val();
+                url = url + "/" + encodeURIComponent($(this).val());
             });
 
             $.get(url, function(data) {
