adding gauge concept (= way to get a measure)
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@1509574 13f79535-47bb-0310-9956-ffa450edef68

--- a/reporting/src/main/resources/templates/jvm/jvm.vm
+++ b/reporting/src/main/resources/templates/jvm/jvm.vm
@@ -14,5 +14,26 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 *#
-Memory mean: $memory
-CPU mean: $cpu
+#macro(printMap $name $map)
+    <section>
+        <div class="page-header">
+            <h2>$name:</h2>
+        </div>
+        <table class="table table-bordered">
+            <thead>
+                <tr><td>Time (ns)</td><td>Value</td></tr>
+            </thead>
+            <tbody>
+                #foreach ($entry in $map.entrySet())
+                    <tr>
+                        <td>$entry.key</td>
+                        <td>$entry.value</td>
+                    </tr>
+                #end
+            </tbody>
+        </table>
+    </section>
+#end
+
+#printMap("Memory", $memory)
+#printMap("CPU", $cpu)
