adding icon in jmx tree
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@1509740 13f79535-47bb-0310-9956-ffa450edef68

--- a/reporting/src/main/resources/resources/css/monitoring.css
+++ b/reporting/src/main/resources/resources/css/monitoring.css
@@ -49,10 +49,19 @@ a.nodeText {
     color: #000000;
     cursor: pointer;
     text-decoration: none;
+    padding-left: 20px;
 }
 
 a.nodeText:hover {
     text-decoration: underline;
+}
+
+.treeClosed {
+    background: url("$mapping/resources/images/tree-closed.gif") no-repeat center left;
+}
+
+.treeOpened {
+    background: url("$mapping/resources/images/tree-opened.gif") no-repeat center left;
 }
 
 .plot {
